argocd/istio-gw-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    -  "argocd.mocha.dev.devnet3.staging"
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
      - "argocd.mocha.dev.devnet3.staging"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd-cert

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - "argocd.mocha.dev.devnet3.staging"
  gateways:
    - istio-system/argocd-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 443
        host: argocd-server.argocd.svc.cluster.local
